unpackaged/main/default/objects/litify_pm__Public_Setup__c/litify_pm__Public_Setup__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Public Setup</label>
</CustomObject>