unpackaged/main/default/objects/litify_pm__Public_Setup__c/fields/Disable_Multiple_Role_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_Multiple_Role_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Multiple Role Trigger</label>
    <type>Checkbox</type>
</CustomField>