unpackaged/main/default/objects/litify_pm__Public_Setup__c/fields/litify_ext__Disable_Intake_Trigger__c.field-meta.xml
<CustomField>
    <fullName>litify_ext__Disable_Intake_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Intake Trigger</label>
    <type>Checkbox</type>
</CustomField>