unpackaged/main/default/objects/litify_pm__Public_Setup__c/fields/litify_ext__Enable_Negotiation_Trigger__c.field-meta.xml
<CustomField>
    <fullName>litify_ext__Enable_Negotiation_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Negotiation Trigger</label>
    <type>Checkbox</type>
</CustomField>