unpackaged/main/default/objects/litify_pm__Public_Setup__c/fields/litify_ext__Enable_Private_Matter__c.field-meta.xml
<CustomField>
    <fullName>litify_ext__Enable_Private_Matter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Private Matter</label>
    <type>Checkbox</type>
</CustomField>