unpackaged/main/default/objects/litify_pm__Public_Setup__c/fields/litify_ext__Enable_Task_Delete_Validation__c.field-meta.xml
<CustomField>
    <fullName>litify_ext__Enable_Task_Delete_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Task Delete Validation</label>
    <type>Checkbox</type>
</CustomField>