unpackaged/main/default/objects/litify_pm__Public_Setup__c/fields/litify_ext__Enable_Task_Repeat_Action__c.field-meta.xml
<CustomField>
    <fullName>litify_ext__Enable_Task_Repeat_Action__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Task Repeat Action</label>
    <type>Checkbox</type>
</CustomField>