unpackaged/main/default/objects/litify_pm__Public_Setup__c/fields/litify_ext__Exclude_Parent_Record_From_Task_Delete__c.field-meta.xml
<CustomField>
    <fullName>litify_ext__Exclude_Parent_Record_From_Task_Delete__c</fullName>
    <inlineHelpText>Example : &#39;SELECT ID FROM ACCOUNT WHERE Name != null&#39;</inlineHelpText>
    <label>Exclude Parent Record From Task Delete</label>
    <type>TextArea</type>
</CustomField>