unpackaged/main/default/objects/litify_pm__Public_Setup__c/fields/litify_ext__Excluded_Profiles_Events__c.field-meta.xml
<CustomField>
    <fullName>litify_ext__Excluded_Profiles_Events__c</fullName>
    <description>Exclude profiles from Event Delete Validation. Profiles ids should be separated by &#39;;&#39;.</description>
    <inlineHelpText>Exclude profiles from Event Delete Validation. Profiles ids should be separated by &#39;;&#39;.</inlineHelpText>
    <label>Excluded Profiles(Events)</label>
    <type>TextArea</type>
</CustomField>