unpackaged/main/default/objects/litify_pm__Public_Setup__c/fields/litify_ext__Override_Completed_Status__c.field-meta.xml
<CustomField>
    <fullName>litify_ext__Override_Completed_Status__c</fullName>
    <description>This setting used to Override Completed status for task object when Matter record moved to Closed.</description>
    <label>Override Completed Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>