unpackaged/main/default/objects/litify_pm__Public_Setup__c/fields/litify_ext__Override_Matter_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>litify_ext__Override_Matter_Display_Name__c</fullName>
    <label>Override Matter Display Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>