unpackaged/main/default/objects/litify_pm__Public_Setup__c/fields/litify_ext__Override_NA_Status__c.field-meta.xml
<CustomField>
    <fullName>litify_ext__Override_NA_Status__c</fullName>
    <description>This setting is used to override default &#39;NA&#39; status for repeated tasks.</description>
    <inlineHelpText>This setting is used to override default &#39;NA&#39; status for repeated tasks.</inlineHelpText>
    <label>Override NA Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>