unpackaged/main/default/objects/litify_pm__Public_Setup__c/fields/litify_pm__Auto_Add_Task__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Auto_Add_Task__c</fullName>
    <defaultValue>true</defaultValue>
    <description>if it is true when a stage on a matter is set as active we create task automatically for this stage</description>
    <label>Auto Add Task</label>
    <type>Checkbox</type>
</CustomField>