unpackaged/main/default/objects/litify_pm__Public_Setup__c/fields/litify_pm__Auto_Add_Triggered_Task__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Auto_Add_Triggered_Task__c</fullName>
    <defaultValue>true</defaultValue>
    <description>when it is true if we are in a matter stage and there are some task that can&#39;t be created for example because due date depend on some date field on matter, when we fill this date field those task are going to be created automatically.</description>
    <label>Auto Add Triggered Task</label>
    <type>Checkbox</type>
</CustomField>