unpackaged/main/default/objects/litify_pm__Public_Setup__c/fields/litify_pm__Billable_Interval__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Billable_Interval__c</fullName>
    <defaultValue>6</defaultValue>
    <description>This interval is going to be the one used to calculate the billable time when recording time in time entries</description>
    <inlineHelpText>This interval is going to be the one used to calculate the billable time when recording time in time entries. It is expressed in minutes.</inlineHelpText>
    <label>Billable Interval</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>