unpackaged/main/default/objects/litify_pm__Public_Setup__c/fields/litify_pm__DICE_Navigate_To__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__DICE_Navigate_To__c</fullName>
    <label>DICE Navigate To</label>
    <length>50</length>
    <type>Text</type>
</CustomField>