unpackaged/main/default/objects/litify_pm__Public_Setup__c/fields/litify_pm__Disable_Account_1to1_Enforce__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Disable_Account_1to1_Enforce__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This setup allows to disable the 1:1 enforcement on account that forces account to have 1 and only 1 contact.</description>
    <label>Disable Account 1 to 1 Enforce</label>
    <type>Checkbox</type>
</CustomField>