unpackaged/main/default/objects/litify_pm__Public_Setup__c/fields/litify_pm__DisableEmailMatchingRuleOnIntakesAPI__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__DisableEmailMatchingRuleOnIntakesAPI__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This setting allows to disable email matching rule on Intakes API</description>
    <inlineHelpText>Allows disabling of email matching rule for new intakes from the Intake API</inlineHelpText>
    <label>DisableEmailMatchingRuleOnIntakesAPI</label>
    <type>Checkbox</type>
</CustomField>