unpackaged/main/default/objects/litify_pm__Public_Setup__c/fields/litify_pm__DisableEmailMatchingRuleOnReferralIntake__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__DisableEmailMatchingRuleOnReferralIntake__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disables the email matching rule for parties created during referral to intake conversion.</description>
    <inlineHelpText>Disables merging of parties that share the same email address when creating an intake from a referral.</inlineHelpText>
    <label>DisableEmailMatchingRuleOnReferralIntake</label>
    <type>Checkbox</type>
</CustomField>