unpackaged/main/default/objects/litify_pm__Public_Setup__c/fields/litify_pm__Firm_Sync_Is_Paginated__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Firm_Sync_Is_Paginated__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Firm Sync Is Paginated</label>
    <type>Checkbox</type>
</CustomField>