unpackaged/main/default/objects/litify_pm__Public_Setup__c/fields/litify_pm__Firm_Sync_Last_Run_Time__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Firm_Sync_Last_Run_Time__c</fullName>
    <description>This field is used when results are paginated, representing the datetime when the last sync ran.</description>
    <label>Firm Sync Last Run Time</label>
    <type>DateTime</type>
</CustomField>