unpackaged/main/default/objects/litify_pm__Public_Setup__c/fields/litify_pm__Firm_Sync_Next_Page__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Firm_Sync_Next_Page__c</fullName>
    <description>This field is used to know which page to request during organizations pagination.</description>
    <label>Firm Sync Next Callout Page</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>