unpackaged/main/default/objects/litify_pm__Public_Setup__c/fields/litify_pm__Firm_Sync_Updated_Since__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Firm_Sync_Updated_Since__c</fullName>
    <description>The datetime we want to check for updates since. Will automatically be set after full sync cycles.</description>
    <label>Firm Sync Updated Since</label>
    <type>DateTime</type>
</CustomField>