unpackaged/main/default/objects/litify_pm__Public_Setup__c/fields/litify_pm__litify_organization_id__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__litify_organization_id__c</fullName>
    <label>litify organization id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>