unpackaged/main/default/objects/litify_pm__Public_Setup__c/fields/litify_pm__Referral_API_endpoint__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Referral_API_endpoint__c</fullName>
    <label>Referral API endpoint</label>
    <type>Url</type>
</CustomField>