unpackaged/main/default/objects/litify_pm__Public_Setup__c/fields/litify_pm__Run_Triggers__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Run_Triggers__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Custom setting that controls the global execution of trigger execution.  To globally disable triggers, uncheck this box.</description>
    <inlineHelpText>Custom setting that controls the global execution of trigger execution.  To globally disable triggers, uncheck this box.</inlineHelpText>
    <label>Run Triggers</label>
    <type>Checkbox</type>
</CustomField>