unpackaged/main/default/objects/litify_pm__Public_Setup__c/fields/litify_pm__Scheduler_Auto_Delete_Logs_Interval__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Scheduler_Auto_Delete_Logs_Interval__c</fullName>
    <label>Scheduler Auto Delete Logs Interval</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>