unpackaged/main/default/objects/litify_pm__Public_Setup__c/fields/litify_pm__Scheduler_Case_Type_Interval__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Scheduler_Case_Type_Interval__c</fullName>
    <description>CaseType interval in seconds</description>
    <label>Scheduler Case Type Interval</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>