unpackaged/main/default/objects/litify_pm__Public_Setup__c/fields/litify_pm__Scheduler_Firm_Interval__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Scheduler_Firm_Interval__c</fullName>
    <description>Firm interval in seconds</description>
    <label>Scheduler Firm Interval</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>