unpackaged/main/default/objects/litify_pm__Public_Setup__c/fields/litify_pm__Use_long_text_for_Time_Entry_description__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Use_long_text_for_Time_Entry_description__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If checked we will use Time_Entry_Description_Long__c for time entries, if unchecked we will use Time_Entry_Description__c</description>
    <label>Use long text for Time Entry description</label>
    <type>Checkbox</type>
</CustomField>